Bug 381968 - crash altitude vs time when use french language pack on Ubuntu-Mate
Summary: crash altitude vs time when use french language pack on Ubuntu-Mate
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Jasem Mutlaq
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-03 20:04 UTC by christian
Modified: 2017-08-24 14:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description christian 2017-07-03 20:04:47 UTC
NAME="Ubuntu"
VERSION="16.04.2 LTS (Xenial Xerus)"
ID=ubuntu
ID_LIKE=debian
PRETTY_NAME="Ubuntu 16.04.2 LTS"
VERSION_ID="16.04"
HOME_URL="http://www.ubuntu.com/"
SUPPORT_URL="http://help.ubuntu.com/"
BUG_REPORT_URL="http://bugs.launchpad.net/ubuntu/"
VERSION_CODENAME=xenial
UBUNTU_CODENAME=xenial

Kstars 2.7.8

I installed the french language pack (language-pack-kde-fr) and when i click on one of the three buttons rise, transit en set, kstars crash. But if i change the application language to english, i have not this issue.


QObject::connect: No such signal QCustomPlot::plottableClick(QCPAbstractPlottable *,QMouseEvent *)
QObject::connect:  (sender name:   'View')
Currently, there are  1  objects displayed.

Thread 1 "kstars" received signal SIGSEGV, Segmentation fault.
SkyObject::recomputeCoords (this=this@entry=0x0, dt=..., 
    geo=geo@entry=0x555556230b20)
    at /build/kstars-bleeding-R4XD3b/kstars-bleeding-17.04+201706100100~ubuntu16.04.1/kstars/skyobjects/skyobject.cpp:339
339	in /build/kstars-bleeding-R4XD3b/kstars-bleeding-17.04+201706100100~ubuntu16.04.1/kstars/skyobjects/skyobject.cpp
Comment 1 Jasem Mutlaq 2017-08-15 08:53:55 UTC
is this applicable in 2.8.0?
Comment 2 Jérôme SONRIER 2017-08-15 23:36:56 UTC
I can reproduce the bug with 2.8.1.

In AltVsTime::slotMarkRiseTime(), we call KStarsData::objectNamed() and use the returned SkyObject pointer without any test. KStarsData::objectNamed() is called with the localized name of the object and returns 0.
Comment 3 Jasem Mutlaq 2017-08-16 05:24:55 UTC
Ah okay, thanks! Do you still have commit access to fix this?
Comment 4 Jérôme SONRIER 2017-08-16 23:00:38 UTC
My commit access should still working. I'll try to fix this bug next week
Comment 5 Jérôme SONRIER 2017-08-24 14:50:32 UTC
Git commit 8ad4e95e344dc5f950988b028cb94102dc370bc2 by Jérôme SONRIER.
Committed on 24/08/2017 at 14:38.
Pushed by jsonrier into branch 'master'.

Fix handling localised names in AltVsTime tool

M  +17   -40   kstars/tools/altvstime.cpp

https://commits.kde.org/kstars/8ad4e95e344dc5f950988b028cb94102dc370bc2