Fix handling localised names in AltVsTime tool

BUG: 381968